# multipar_bayes

./: LICENSE  README.md  build_doc.py  prek.toml  pyproject.toml
.github/workflows/: make_docs_pages.yml
docs/: index.html  multipar_bayes.html  search.js
docs/multipar_bayes/: bounds.html  measurements.html
src/multipar_bayes/: __init__.py  bounds.py  convex.py  lower.py  measurements.py  pgm.py
tests/: test_measurements.py  test_prior_calcs.py  test_scalar_bounds.py
